--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -1,13 +1,52 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.control-panel {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 320px;
+  background: #fff;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  padding: 12px 24px;
+  margin: 20px;
+  font-size: 13px;
+  line-height: 2;
+  color: #6b6b76;
+  text-transform: uppercase;
+  outline: none;
+  cursor: default;
+}
+
+.fullscreen{
+  position: 'absolute';
+  width:30px;
+  top: 0;
+  left: 0;
+  padding: '10px';
+  margin:10px;
+}
+
+.nav{
+  position: 'absolute';
+  width:30px;
+  top: 36;
+  left: 0;
+  padding: '10px';
+  margin:10px;
+}
+
+.red{
+  color:red;
+  cursor: pointer;
+}
+
+.mapboxgl-popup{
+  z-index: 50;
 }
