--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -50,3 +50,10 @@ code {
 .mapboxgl-popup{
   z-index: 50;
 }
+
+.loader{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-left: -50px;
+}
