--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -11,7 +11,7 @@ code {
   position: absolute;
   top: 0;
   right: 0;
-  max-width: 320px;
+  width: 320px;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
   padding: 12px 24px;
@@ -22,6 +22,10 @@ code {
   text-transform: uppercase;
   outline: none;
   cursor: default;
+}
+
+.cont{
+  margin: 20px 0;
 }
 
 .fullscreen{
