--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -22,6 +22,7 @@ code {
   text-transform: uppercase;
   outline: none;
   cursor: default;
+  z-index: 1;
 }
 
 .cont{
@@ -63,5 +64,14 @@ code {
 }
 
 .pop{
-  margin: 10px;
+  pointer-events: none; 
+  position: absolute; 
+  z-index: 9; 
+  font-size: 12px; 
+  padding: 8px; 
+  background: #000; 
+  color: #fff; 
+  min-width: 160px; 
+  max-height: 240px; 
+  overflow-y: hidden;
 }
