implemented dark and light modes

--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -10,15 +10,13 @@ code {
 .control-panel {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 320px;
-  background: #fff;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
   padding: 12px 24px;
   margin: 20px;
   font-size: 13px;
   line-height: 2;
-  color: #6b6b76;
   text-transform: uppercase;
   outline: none;
   cursor: default;
@@ -50,6 +48,10 @@ code {
 .red{
   color:red;
   cursor: pointer;
+}
+
+.white{
+  color: #fff;
 }
 
 .mapboxgl-popup{
