--- a/frontend/crime-visualizer/src/css/graph.css
+++ b/frontend/crime-visualizer/src/css/graph.css
@@ -5,8 +5,10 @@ h1 {
 }
 
 #graph-wrapper{
+    position: absolute;
+    background: #fff;
     width: 100%;
-    margin: 20px;
+    left: 5vw;
 }
 
 .graph {
@@ -14,6 +16,7 @@ h1 {
   border: 1px solid black;
   padding: 10px;
   box-sizing: content-box;
+  background: #fff;
 }
 
 #bar-chart {
