--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -21,10 +21,20 @@ code {
   outline: none;
   cursor: default;
   z-index: 1;
+  max-height: 95vh;
 }
 
 .cont{
   margin: 20px 0;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 5px;
 }
 
 .fullscreen{
@@ -34,6 +44,28 @@ code {
   left: 0;
   padding: '10px';
   margin:10px;
+}
+
+.icons{
+  margin-right: 10px;
+}
+
+.legend{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 200px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  padding: 12px 24px;
+  margin: 20px;
+  font-size: 13px;
+  line-height: 2;
+  text-transform: uppercase;
+  outline: none;
+  cursor: default;
+  z-index: 1;
+  max-height: 95vh;
+  overflow-y: scroll;
 }
 
 .nav{
