--- a/frontend/crime-visualizer/src/index.css
+++ b/frontend/crime-visualizer/src/index.css
@@ -22,6 +22,7 @@ code {
   cursor: default;
   z-index: 1;
   max-height: 95vh;
+  overflow-y: scroll;
 }
 
 .cont{
@@ -102,14 +103,14 @@ code {
 }
 
 .pop{
-  pointer-events: none; 
-  position: absolute; 
-  z-index: 9; 
-  font-size: 12px; 
-  padding: 8px; 
-  background: #000; 
-  color: #fff; 
-  min-width: 160px; 
-  max-height: 240px; 
+  pointer-events: none;
+  position: absolute;
+  z-index: 9;
+  font-size: 12px;
+  padding: 8px;
+  background: #000;
+  color: #fff;
+  min-width: 160px;
+  max-height: 240px;
   overflow-y: hidden;
 }
